# polymarket-apis

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: build-install.yml  ci.yml  ruff.yml  schema-drift.yml  type-check.yml
notes/: round1_submission_results.md
src/polymarket_apis/: __init__.py  logging.py
src/polymarket_apis/clients/: __init__.py  clob_client.py  data_client.py  gamma_client.py  graphql_client.py  web3_client.py  websockets_client.py
src/polymarket_apis/testing/: __init__.py  contract_assertions.py
src/polymarket_apis/types/: __init__.py  clob_types.py  common.py  data_types.py  gamma_types.py  web3_types.py  websockets_types.py
src/polymarket_apis/utilities/: _internal_log.py  config.py  constants.py  endpoints.py  exceptions.py  headers.py
src/polymarket_apis/utilities/order_builder/: builder.py  helpers.py  model.py
src/polymarket_apis/utilities/signing/: eip712.py  hmac.py  model.py  signer.py
src/polymarket_apis/utilities/web3/: constants.py  helpers.py
src/polymarket_apis/utilities/web3/abis/: CTFExchange.json  CollateralToken.json  CtfAutoRedeem.json  CtfCollateralAdapter.json  CustomContractErrors.py  MultiSend.json  NegRiskCtfCollateralAdapter.json  custom_contract_errors.py
tests/prod_read/: test_schema_contracts.py
tests/prod_read/snapshots/: clob__book.json  clob__markets_condition_id.json  data__activity.json  data__closed-positions.json  data__holders.json  data__live-volume.json  data__oi.json  data__positions.json  data__trades.json  data__v1_leaderboard.json  data__value.json  gamma__events.json  gamma__markets.json  gamma__series.json  gamma__series_id.json  gamma__sports.json  gamma__tags.json  gamma__tags_id.json  gamma__tags_id_related-tags.json  gamma__teams.json  lb-api__profit.json  lb-api__rank.json  user-pnl__user-pnl.json
