[project]
name = "polymarket-apis"
version = "0.1.4"
description = "WIP - Unified Polymarket apis - clob, gamma, data, web3, websockets"
authors = [
    { name = "Razvan Gheorghe", email = "razvan@gheorghe.me" }
]
dependencies = [
    "httpx[http2]>=0.25.1",
    "pydantic>=2.10.5",
    "poly-eip712-structs>=0.0.1",
    "py-order-utils>=0.3.2",
    "web3>=7.0",
    "lomond>=0.3.3",
    "wsaccel>=0.6.7",
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.9.1",
    "notebook>=7.3.2",
    "python-dotenv>=1.0.1",
    "plotly>=5.24.1",
    "jupyter-contrib-nbextensions>=0.7.0",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["E301"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_apis"]
